# HelloCpp

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: develop.yml  linux-aarch64.yml  linux-x64.yml  mac-x64.yml  release.yml  test_coverage.yml  windows-x64.yml
api/hello/: hello.hpp
cmake/: helloConfig.cmake.in
cmake/coverage/: coverage.cmake
cmake/install/: auto_install.cmake  manual_install.cmake
cmake/test/: unittest.cmake
example/: CMakeLists.txt  use_hello.cpp
src/: cv.cpp  hello.cpp
test/: test_hello.cpp
